WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263660
REGRESSION(
269608@main
): 32-bit shifts are used to zero out upper 32-bits after all.
https://bugs.webkit.org/show_bug.cgi?id=263660
Summary
REGRESSION(269608@main): 32-bit shifts are used to zero out upper 32-bits aft...
Mark Lam
Reported
2023-10-25 08:22:37 PDT
In
https://commits.webkit.org/269608@main
, we added a peephole optimization to reduce shifts to moves if the shift amount is 0. However, this is only correct if shift instructions are never used indirectly to zero out the upper 32-bits of the register. It turns out that the JIT backends do rely on shifts to zero out the upper 32-bits.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-25 08:22:56 PDT
<
rdar://problem/117475957
>
Mark Lam
Comment 2
2023-10-25 09:25:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19543
EWS
Comment 3
2023-10-25 14:39:02 PDT
Committed
269785@main
(748f4d4620ab): <
https://commits.webkit.org/269785@main
> Reviewed commits have been landed. Closing PR #19543 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug