REGRESSION(269608@main): 32-bit shifts are used to zero out upper 32-bits after all. https://bugs.webkit.org/show_bug.cgi?id=263660 rdar://117475957

Reviewed by Yusuke Suzuki.

In https://commits.webkit.org/269608@main, we added a peephole optimization to reduce shifts
to moves if the shift amount is 0.  However, this is only correct if shift instructions are
never used indirectly to zero out the upper 32-bits of the register.  It turns out that the
JIT backends do rely on 32-bit shifts to zero out the upper 32-bits.

Changes made:
1. Revert 269608@main 32-bit shift changes.
4. Add some MIPS and RISCV64 files to the Xcode project to make it easier to work with them
   in Xcode.  Also ensure that while they are added to the project, they aren't included as
   part of any build.

* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/JavaScriptCore/assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::lshift32):
(JSC::MacroAssemblerARM64::rotateRight32):
(JSC::MacroAssemblerARM64::rshift32):
(JSC::MacroAssemblerARM64::urshift32):
* Source/JavaScriptCore/assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::lshift32):
(JSC::MacroAssemblerMIPS::rshift32):
(JSC::MacroAssemblerMIPS::urshift32):
* Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.h:
(JSC::MacroAssemblerRISCV64::lshift32):
(JSC::MacroAssemblerRISCV64::rshift32):
(JSC::MacroAssemblerRISCV64::urshift32):
* Source/JavaScriptCore/assembler/MacroAssemblerX86Common.h:
(JSC::MacroAssemblerX86Common::lshift32):
(JSC::MacroAssemblerX86Common::rshift32):
(JSC::MacroAssemblerX86Common::urshift32):
(JSC::MacroAssemblerX86Common::rotateRight32):
(JSC::MacroAssemblerX86Common::rotateLeft32):

Canonical link: https://commits.webkit.org/269785@main