Source/JavaScriptCore/assembler/MacroAssemblerARM64.h
@@ -879,8 +879,6 @@ public:
 
     void lshift32(RegisterID src, TrustedImm32 imm, RegisterID dest)
     {
-        if (UNLIKELY(!imm.m_value))
-            return move(src, dest);
         m_assembler.lsl<32>(dest, src, imm.m_value & 0x1f);
     }
 
@@ -1219,8 +1217,6 @@ public:
 
     void rotateRight32(RegisterID src, TrustedImm32 imm, RegisterID dest)
     {
-        if (UNLIKELY(!imm.m_value))
-            return move(src, dest);
         m_assembler.ror<32>(dest, src, imm.m_value & 31);
     }
 
@@ -1258,8 +1254,6 @@ public:
 
     void rshift32(RegisterID src, TrustedImm32 imm, RegisterID dest)
     {
-        if (UNLIKELY(!imm.m_value))
-            return move(src, dest);
         m_assembler.asr<32>(dest, src, imm.m_value & 0x1f);
     }
 
@@ -1424,8 +1418,6 @@ public:
     
     void urshift32(RegisterID src, TrustedImm32 imm, RegisterID dest)
     {
-        if (UNLIKELY(!imm.m_value))
-            return move(src, dest);
         m_assembler.lsr<32>(dest, src, imm.m_value & 0x1f);
     }
 
